--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@simonwep/pickr/dist/themes/classic.min.css" />
-    <link rel="stylesheet" href="style.css">
+    <!-- 'classic' theme -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@simonwep/pickr/dist/themes/monolith.min.css" />
+    <!-- 'monolith' theme -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@simonwep/pickr/dist/themes/nano.min.css" />
+    <!-- 'nano' theme -->
+    <!-- <link rel="stylesheet" href="style.css"> -->
 </head>
 
 <body>
@@ -23,7 +28,7 @@
         // Simple example, see optional options for more configuration.
         const pickr = Pickr.create({
             el: '.color-picker',
-            theme: 'classic', // or 'monolith', or 'nano'
+            theme: 'nano', // or 'monolith', or 'nano'
 
 
             components: {
@@ -32,6 +37,7 @@
                 preview: true,
                 opacity: true,
                 hue: true,
+
 
                 // Input / output Options
                 interaction: {
@@ -47,11 +53,11 @@
             }
         });
 
-        window.addEventListener("load", function(){
+        window.addEventListener("load", function () {
             pickr.show()
         })
 
-        window.addEventListener("click", function(){
+        window.addEventListener("click", function () {
             pickr.show()
         })
 
