--- a/index.html
+++ b/index.html
@@ -6,62 +6,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@simonwep/pickr/dist/themes/classic.min.css" />
-    <!-- 'classic' theme -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@simonwep/pickr/dist/themes/monolith.min.css" />
     <!-- 'monolith' theme -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@simonwep/pickr/dist/themes/nano.min.css" />
+    <link rel="stylesheet" href="./color.picker.css" />
     <!-- 'nano' theme -->
-    <!-- <link rel="stylesheet" href="style.css"> -->
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
 
+
     <div class="color-picker"></div>
 
+
     <!-- Modern or es5 bundle -->
-    <script src="https://cdn.jsdelivr.net/npm/@simonwep/pickr/dist/pickr.min.js"></script>
-
-    <script>
-
-        // Simple example, see optional options for more configuration.
-        const pickr = Pickr.create({
-            el: '.color-picker',
-            theme: 'nano', // or 'monolith', or 'nano'
-
-
-            components: {
-
-                // Main components
-                preview: true,
-                opacity: true,
-                hue: true,
-
-
-                // Input / output Options
-                interaction: {
-                    hex: false,
-                    rgba: false,
-                    hsla: false,
-                    hsva: false,
-                    cmyk: false,
-                    input: true,
-                    clear: false,
-                    save: false
-                }
-            }
-        });
-
-        window.addEventListener("load", function () {
-            pickr.show()
-        })
-
-        window.addEventListener("click", function () {
-            pickr.show()
-        })
-
-    </script>
+    <script src="color.picker.js"></script>
+    <script src="script.js"></script>
 
 </body>
 
